--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Dist::Zilla::PluginBundle::PadrePlugin
 
+0.02   2010.10.23
+	- Minor POD fix (AZAWAWI)
+
 0.01   2010.10.23
 	- First version (AZAWAWI)
