--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Dist::Zilla::PluginBundle::PadrePlugin
 
+0.04   2010.10.28
+	- CompileTests needs_display and no_display options are enabled
+	until my patch is accepted (AZAWAWI)
+
 0.03   2010.10.27
 	- Added [LoadTests] with needs_display option enabled. Basically this
 	enables us to drop t/00-load.t from all Padre plugins (AZAWAWI)
