Import of AZAWAWI/Dist-Zilla-PluginBundle-PadrePlugin-0.05 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-PadrePlugin
gitpan-cpan-version:      0.05
gitpan-cpan-path:         AZAWAWI/Dist-Zilla-PluginBundle-PadrePlugin-0.05.tar.gz
gitpan-cpan-author:       AZAWAWI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Dist::Zilla::PluginBundle::PadrePlugin
 
+0.05   2010.10.28
+	- Refactored code to use Dist::Zilla::Role::PluginBundle::Easy (AZAWAWI)
+	- Common Padre plugins dependencies are automatically added now
+	when building (AZAWAWI).
+
 0.04   2010.10.28
 	- CompileTests needs_display and no_display options are enabled
 	until my patch is accepted (AZAWAWI)
