Import of AZAWAWI/Dist-Zilla-PluginBundle-PadrePlugin-0.07 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-PadrePlugin
gitpan-cpan-version:      0.07
gitpan-cpan-path:         AZAWAWI/Dist-Zilla-PluginBundle-PadrePlugin-0.07.tar.gz
gitpan-cpan-author:       AZAWAWI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Dist::Zilla::PluginBundle::PadrePlugin
 
+0.07   2010.11.07
+	- Bumped Locale::Msgfmt dependency to 0.15 (AZAWAWI)
+	- Removed LoadTests dependency because CompileTests makes it redundant (AZAWAWI)
+
 0.06   2010.10.28
 	- Removed Test::NeedsDisplay dependency (AZAWAWI)
 	- Removed the 'no_display' obsolete option of [CompileTests]
