--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Dist::Zilla::PluginBundle::PadrePlugin
 
+0.08   2010.12.08
+	- Switched to [MakeMaker] instead of [ModuleBuild] since it conflicts on
+	  win32 with [EOLTests] (AZAWAWI)
+
 0.07   2010.11.07
 	- Bumped Locale::Msgfmt dependency to 0.15 (AZAWAWI)
 	- Removed LoadTests dependency because CompileTests makes it redundant (AZAWAWI)
